tests/miniJava/neg/006723_mutation.MiniJava
class java { public static while void Main ( String [ ] java ) { { } } }
